--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -1,13 +1,27 @@
 .form-block
-	padding: 50px 34px 0 34px
+	padding: 50px 0 0 0
 	max-width: 714px
 	background-color: #f5f5f5
+	&-head
+		padding: 0 34px
+	&-body
+		padding: 0 34px
+	&-footer
+		padding: 33px 34px 102px 34px
+		background-color: #eeeeee
 .form-content
 	.form-content-head
 		font-size: 16px
 		color: #000000
 		font-weight: bold
 		margin-bottom: 25px
+	&-devider
+		border: none
+		width: 100%
+		height: 1px
+		background-color: #cccccc
+		margin-top: 15px
+		margin-bottom: 34px
 .input
 	&-row
 		font-size: 0
@@ -26,15 +40,35 @@
 				width: 100%
 	&-wrapper
 		position: relative
+		.select-check
+			width: 100%
+		.select-carret
+			width: 10px
+			height: 6px
+		.selects
+			border-radius: 2px
+			border-color: #a6a6a6
+			&:hover
+				border-color: #000000
+			//box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2);
+		.js-select-custom.active
+			.selects
+				border: 2px solid #000000
+				margin-bottom: -1px
+			.dropdown-inner
+				border: 2px solid #000000
+				border-top: 1px solid #ccc
 	&-main
 		display: block
 		width: 100%
 		border: 1px solid #a6a6a6
+		border-radius: 2px
 		box-sizing: border-box
 		+tr(all .3s ease)
 		font-size: 16px
 		line-height: 1
 		padding: 30px 10px 10px 25px
+		resize: none
 		&:hover
 			border-color: #000000
 		&:focus
@@ -61,8 +95,40 @@
 		left: 25px
 		color: #737373
 		font-size: 16px
+		line-height: 1.3
 		+tr(all .3s ease)
-
+	&-submit
+		font-size: 16px
+		padding: 15px 35px
+		color: #000000
+		border: 1px solid #dbcf1b
+		background-color: #fff233
+		border-radius: 5px
+		background-image: linear-gradient(#fff94e 0%, #ffeb18 100%)
+		box-shadow: 0px 5px 10px 0px rgba(107, 101, 7, 0.26)
+		+tr(all .3s ease)
+		&:hover
+			background-color: #fff94e
+		&:active
+			box-shadow: none
+	&-counter
+		&-nav
+			position: absolute
+			top: 50%
+			right: 20px
+			transform: translateY(-50%)
+		&-btn
+			display: block
+			width: 10px
+			height: 6px
+			margin: 13px 0
+			position: relative
+			svg
+				position: absolute
+				top: 0
+				left: 0
+			&.inc
+				transform: rotate(180deg)
 .radio
 	&-group
 		display: inline-block
@@ -75,6 +141,18 @@
 		display: inline-block
 		font-size: 14px
 		color: #000000
+		&:first-child
+			border-top-left-radius: 5px
+			border-bottom-left-radius: 5px
+			.radio-label
+				border-top-left-radius: 5px
+				border-bottom-left-radius: 5px
+		&:last-child
+			border-top-right-radius: 5px
+			border-bottom-right-radius: 5px
+			.radio-label
+				border-top-right-radius: 5px
+				border-bottom-right-radius: 5px
 	&-input
 		display: none
 		&:checked ~ .radio-label
@@ -83,6 +161,7 @@
 			.radio-label__custom
 				background-color: #ffffff
 				box-shadow: none
+				border-color: #cdc115
 			.radio-label__check
 				opacity: 1
 
@@ -90,6 +169,8 @@
 		display: inline-block
 		padding: 10px 15px
 		border: 1px solid #cccccc
+		margin-right: -1px
+		margin-bottom: -1px
 		+tr(all .3s ease)
 		&:hover
 			cursor: pointer
@@ -106,6 +187,7 @@
 			height: 18px
 			border: 1px solidcccccc
 			background-color: #ffffff
+			border: 1px solid transparent
 			border-radius: 50%
 			box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.13)
 			margin-right: 15px
@@ -121,9 +203,56 @@
 			left: 50%
 			transform: translate(-50%, -50%)
 			background-color: #f2db00
+			background-image: linear-gradient(#fcf728 0%, #e9c305 100%)
 			opacity: 0
 			+tr(all .3s ease)
 
+.check-label
+	display: inline-block
+	input
+		display: none
+		&:checked + .check-label__custom .check-label__checked
+			opacity: 1
+	&__checked
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		opacity: 0
+		+tr(all .3s ease)
+	&__custom
+		display: inline-block
+		vertical-align: middle
+		width: 25px
+		height: 25px
+		border: 1px solid #cccccc
+		border-radius: 3px
+		margin-right: 15px
+		background-color: #ffffff
+		+tr(all .3s ease)
+		position: relative
+		&:hover
+			background-color: #fafafa
+			border-color: #000000
+			cursor: pointer
+	&__text
+		vertical-align: middle
+		display: inline-block
+		font-size: 14px
+		color: #767a7d
+		a
+			color: #000000
+			font-weight: bold
+			&::after
+				content: ' *'
+
+.disabled-field
+	border-color: #c3c3c3
+	background-color: #ffffff
+	pointer-events: none
+	& ~ .input-label
+		color: #d1d1d1
+		pointer-events: none
 .help-block.form-error
 	font-size: 12px
 	color: #ed1c24
